[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/game_scene.gd" type="Script" id=1]
[ext_resource path="res://resources/terrain_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/ui_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/title_font.tres" type="DynamicFont" id=5]

[node name="game_scene" type="Node2D"]
editor/display_folded = true
script = ExtResource( 1 )

[node name="terrain_tilemap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1

[node name="objects" type="Node2D" parent="."]

[node name="aliens" type="Node2D" parent="."]

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 1920, 912 )

[node name="bullets" type="Node2D" parent="."]

[node name="timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="ui" type="CanvasLayer" parent="."]

[node name="bar" type="ColorRect" parent="ui"]
margin_top = 624.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.784314 )

[node name="health_label" type="Label" parent="ui/bar"]
margin_left = 16.0
margin_top = 16.0
margin_right = 416.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 328.671, -12.8297 )
custom_fonts/font = ExtResource( 4 )
text = "Health: 100%"
valign = 1

[node name="score_label" type="Label" parent="ui/bar"]
margin_left = 448.0
margin_top = 16.0
margin_right = 880.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 328.671, -12.8297 )
custom_fonts/font = ExtResource( 4 )
text = "Score: 000000"
valign = 1

[node name="menu_button" type="Button" parent="ui/bar"]
margin_left = 1088.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 4 )
text = "Menu"

[node name="menu_popup" type="ColorRect" parent="ui"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.784314 )

[node name="title_label" type="Label" parent="ui/menu_popup"]
margin_right = 1280.0
margin_bottom = 304.0
custom_fonts/font = ExtResource( 5 )
text = "Menu"
align = 1
valign = 1

[node name="resume_button" type="Button" parent="ui/menu_popup"]
margin_left = 368.0
margin_top = 288.0
margin_right = 928.0
margin_bottom = 400.0
custom_fonts/font = ExtResource( 4 )
text = "Resume"

[node name="exit_button" type="Button" parent="ui/menu_popup"]
margin_left = 368.0
margin_top = 464.0
margin_right = 928.0
margin_bottom = 576.0
custom_fonts/font = ExtResource( 4 )
text = "Exit"

[node name="gameover_popup" type="ColorRect" parent="ui"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.784314 )

[node name="title_label" type="Label" parent="ui/gameover_popup"]
margin_right = 1280.0
margin_bottom = 432.0
custom_fonts/font = ExtResource( 5 )
text = "Game Over"
align = 1
valign = 1

[node name="score_label" type="Label" parent="ui/gameover_popup"]
margin_top = 192.0
margin_right = 1280.0
margin_bottom = 512.0
custom_fonts/font = ExtResource( 4 )
text = "Score: 000000"
align = 1
valign = 1

[node name="exit_button" type="Button" parent="ui/gameover_popup"]
margin_left = 368.0
margin_top = 448.0
margin_right = 928.0
margin_bottom = 560.0
custom_fonts/font = ExtResource( 4 )
text = "Exit"
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="ui/bar/menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="ui/menu_popup/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ui/menu_popup/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ui/gameover_popup/exit_button" to="." method="_on_exit_button_pressed"]
